<?xml version="1.0"?>
<package format="3">
  <name>ros2_pysdf</name>
  <version>2.1.0</version>
  <description>Python library to parse SDF into class hierarchy and export URDF</description>
  <maintainer email="zach@bamrobotics.com">Zach Yamaoka</maintainer>
  <author>Zach Yamaoka</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
